add create host screen
